# vira

./: LICENSE  README.md  build-from-source-linux.sh  build-from-source-windows.ps1  install.hacker
cli/vira/: go.mod  main.go
cli/virac/: go.mod  main.go
repository/: virus.json
source/compiler/: Cargo.toml
source/compiler/src/: main.rs
source/diagnostic/: Cargo.toml
source/diagnostic/src/: main.rs
source/interpreter/: Cargo.toml
source/interpreter/src/: main.rs
source/plsa/: main.cpp
source/preprocessor/: main.c
source/translator/: Cargo.toml
source/translator/src/: main.rs
source/updater/: go.mod  main.go
source/vm/: Cargo.toml
source/vm/src/: main.rs
